UI polishing. Part I: abbrev astyle autoproject
Changes:
Tab order in dialogs, setToolTip() and setWhatsThis() for KAction's, whatsthis and tooltips for menus and tool buttons, dialog accelerators check.

Please every developer if you are making changes to ui make sure you won't mess tab order or accelerators.

Every KAction should have tooltip and whats this like:
action = new KAction ( i18n("Name"), ... );
action->setToolTip(i18n("Name"));
action->setWhatsThis(i18n("Name<p>Long description"));

Same for menus:
int id = popup->insertItem( i18n("Name"), ... );
popup->setWhatsThis(id, i18n("Name<p>Long description"));

Same for toolbar buttons:
button = new QToolButton( ... );
QToolTip::add(button, i18n("Name"));
QWhatsThis::add(button, i18n("Name<p>Long description"));

CCMAIL: kdevelop-devel@kdevelop.org

--- a/lib/project/removesubprojectdlgbase.ui
+++ b/lib/project/removesubprojectdlgbase.ui
@@ -58,7 +58,7 @@
                         <cstring>removeCheckBox</cstring>
                     </property>
                     <property name="text">
-                        <string>Also remove it from disk</string>
+                        <string>Also &amp;remove it from disk</string>
                     </property>
                 </widget>
                 <widget class="QLabel">
