--- a/parts/appwizard/importdlgbase.ui
+++ b/parts/appwizard/importdlgbase.ui
@@ -58,6 +58,9 @@
             <property name="text">
                 <string>Fetch &amp;Module</string>
             </property>
+            <property name="autoDefault">
+                <bool>false</bool>
+            </property>
         </widget>
         <widget class="QLabel" row="1" column="0">
             <property name="name">
@@ -181,6 +184,9 @@
                     <property name="text">
                         <string>&amp;OK</string>
                     </property>
+                    <property name="default">
+                        <bool>true</bool>
+                    </property>
                 </widget>
                 <widget class="QPushButton">
                     <property name="name">
@@ -282,6 +288,7 @@
     </connection>
 </connections>
 <tabstops>
+    <tabstop>urlinput_edit</tabstop>
     <tabstop>vcsCombo</tabstop>
     <tabstop>fetchModuleButton</tabstop>
     <tabstop>name_edit</tabstop>
