--- a/parts/autoproject/addexistingdlgbase.ui
+++ b/parts/autoproject/addexistingdlgbase.ui
@@ -27,7 +27,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>infoGroupBox</cstring>
@@ -51,7 +50,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>infoLayout1</cstring>
@@ -63,7 +61,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>directoryStaticLabel</cstring>
@@ -117,7 +114,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="KSqueezedTextLabel">
                             <property name="name">
                                 <cstring>directoryLabel</cstring>
@@ -164,7 +160,6 @@
                     <property name="margin">
                         <number>0</number>
                     </property>
-
                     <widget class="QGroupBox">
                         <property name="name">
                             <cstring>sourceGroupBox</cstring>
@@ -191,7 +186,6 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-
                         </vbox>
                     </widget>
                     <widget class="QLayoutWidget">
@@ -205,7 +199,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>arrowSpacer1</cstring>
@@ -277,7 +270,6 @@
                     <property name="margin">
                         <number>0</number>
                     </property>
-
                     <widget class="QLayoutWidget">
                         <property name="name">
                             <cstring>Layout9</cstring>
@@ -289,7 +281,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <widget class="QLayoutWidget">
                                 <property name="name">
                                     <cstring>Layout8</cstring>
@@ -301,7 +292,6 @@
                                     <property name="margin">
                                         <number>0</number>
                                     </property>
-
                                     <widget class="QLabel">
                                         <property name="name">
                                             <cstring>destStaticLabel</cstring>
@@ -347,7 +337,6 @@
                                     <property name="name">
                                         <cstring>unnamed</cstring>
                                     </property>
-
                                 </vbox>
                             </widget>
                         </vbox>
@@ -363,7 +352,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>arrowSpacer1_2</cstring>
@@ -490,6 +478,10 @@
     </connection>
 </connections>
 <tabstops>
+    <tabstop>addAllButton</tabstop>
+    <tabstop>addSelectedButton</tabstop>
+    <tabstop>removeAllButton</tabstop>
+    <tabstop>removeSelectedButton</tabstop>
     <tabstop>okButton</tabstop>
     <tabstop>cancelButton</tabstop>
 </tabstops>
@@ -500,7 +492,6 @@
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-
 <includehints>
     <includehint>ksqueezedtextlabel.h</includehint>
     <includehint>ksqueezedtextlabel.h</includehint>
