--- a/parts/autoproject/addtargetdlgbase.ui
+++ b/parts/autoproject/addtargetdlgbase.ui
@@ -22,7 +22,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>groupBox2</cstring>
@@ -174,7 +173,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QCheckBox">
                     <property name="name">
                         <cstring>allstatic_box</cstring>
@@ -218,7 +216,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>ldflagsother_label</cstring>
@@ -228,7 +225,10 @@
                                 </font>
                             </property>
                             <property name="text">
-                                <string>Other:</string>
+                                <string>Ot&amp;her:</string>
+                            </property>
+                            <property name="buddy" stdset="0">
+                                <cstring>ldflagsother_edit</cstring>
                             </property>
                         </widget>
                         <widget class="QLineEdit">
@@ -251,7 +251,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>Horizontal Spacing2</cstring>
@@ -335,15 +334,15 @@
     <tabstop>okbutton</tabstop>
     <tabstop>cancelbutton</tabstop>
 </tabstops>
-<slots>
-    <slot access="protected">primaryChanged()</slot>
-</slots>
-<includehints>
-    <includehint>ksqueezedtextlabel.h</includehint>
-</includehints>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<slots>
+    <slot access="protected">primaryChanged()</slot>
+</slots>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+<includehints>
+    <includehint>ksqueezedtextlabel.h</includehint>
+</includehints>
 </UI>
