--- a/parts/autoproject/configureoptionswidgetbase.ui
+++ b/parts/autoproject/configureoptionswidgetbase.ui
@@ -22,7 +22,6 @@
         <property name="margin">
             <number>0</number>
         </property>
-
         <widget class="QLayoutWidget">
             <property name="name">
                 <cstring>Layout1</cstring>
@@ -31,7 +30,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>config_label</cstring>
@@ -45,7 +43,10 @@
                         </sizepolicy>
                     </property>
                     <property name="text">
-                        <string>Configuration:</string>
+                        <string>&amp;Configuration:</string>
+                    </property>
+                    <property name="buddy" stdset="0">
+                        <cstring>config_combo</cstring>
                     </property>
                 </widget>
                 <widget class="QComboBox">
@@ -86,7 +87,10 @@
                         <cstring>addconfig_button</cstring>
                     </property>
                     <property name="text">
-                        <string>Add</string>
+                        <string>&amp;Add</string>
+                    </property>
+                    <property name="autoDefault">
+                        <bool>false</bool>
                     </property>
                 </widget>
                 <widget class="QPushButton">
@@ -94,7 +98,10 @@
                         <cstring>removeconfig_button</cstring>
                     </property>
                     <property name="text">
-                        <string>Remove</string>
+                        <string>&amp;Remove</string>
+                    </property>
+                    <property name="autoDefault">
+                        <bool>false</bool>
                     </property>
                 </widget>
                 <spacer>
@@ -125,7 +132,7 @@
                     <cstring>general_tab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>General</string>
+                    <string>&amp;General</string>
                 </attribute>
                 <grid>
                     <property name="name">
@@ -158,7 +165,10 @@
                             <cstring>configargs_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Configure arguments:</string>
+                            <string>Configure argu&amp;ments:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>configargs_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLabel" row="3" column="0" rowspan="1" colspan="6">
@@ -166,7 +176,10 @@
                             <cstring>builddir_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Build directory:</string>
+                            <string>&amp;Build directory:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>builddir_edit</cstring>
                         </property>
                     </widget>
                     <spacer row="1" column="0">
@@ -191,7 +204,10 @@
                             <cstring>topsourcedir_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Top source directory:</string>
+                            <string>&amp;Top source directory:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>topsourcedir_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="4" column="1" rowspan="1" colspan="4">
@@ -300,7 +316,7 @@
                             <cstring>ldflags_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Linker flags (LDFLAGS):</string>
+                            <string>&amp;Linker flags (LDFLAGS):</string>
                         </property>
                         <property name="buddy" stdset="0">
                             <cstring>ldflags_edit</cstring>
@@ -384,7 +400,7 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>cppflags_label</cstring>
                         </property>
                         <property name="text">
-                            <string>C/C++ preprocessor flags (CPPFLAGS):</string>
+                            <string>C/C++ &amp;preprocessor flags (CPPFLAGS):</string>
                         </property>
                         <property name="buddy" stdset="0">
                             <cstring>cppflags_edit</cstring>
@@ -412,7 +428,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>ccompiler_label</cstring>
                         </property>
                         <property name="text">
-                            <string>C compiler:</string>
+                            <string>C com&amp;piler:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>cservice_combo</cstring>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="0" column="1">
@@ -442,7 +461,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>cflags_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Compiler flags (CFLAGS):</string>
+                            <string>Compiler &amp;flags (CFLAGS):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>cflags_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="4" column="1">
@@ -494,7 +516,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>cbinary_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Compiler command (CC):</string>
+                            <string>Compiler co&amp;mmand (CC):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>cbinary_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="2" column="1">
@@ -532,13 +557,15 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>cxxcompiler_label</cstring>
                         </property>
                         <property name="text">
-                            <string>C++ compiler:</string>
+                            <string>C++ com&amp;piler:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>cxxservice_combo</cstring>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="0" column="1">
@@ -568,7 +595,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>cxxbinary_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Compiler command (CXX):</string>
+                            <string>Compiler co&amp;mmand (CXX):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>cxxbinary_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="2" column="1">
@@ -598,7 +628,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>cxxflags_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Compiler flags (CXXFLAGS):</string>
+                            <string>Compiler &amp;flags (CXXFLAGS):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>cxxflags_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="4" column="1">
@@ -658,13 +691,15 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>f77compiler_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Fortran compiler:</string>
+                            <string>Fortran com&amp;piler:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>f77service_combo</cstring>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="0" column="1">
@@ -694,7 +729,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>f77binary_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Compiler command (F77):</string>
+                            <string>Compiler co&amp;mmand (F77):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>f77binary_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="2" column="1">
@@ -724,7 +762,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                             <cstring>f77flags_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Compiler flags (FFLAGS):</string>
+                            <string>Compiler &amp;flags (FFLAGS):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>f77flags_edit</cstring>
                         </property>
                     </widget>
                     <widget class="QLineEdit" row="4" column="1">
@@ -941,6 +982,9 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
     <tabstop>f77flags_edit</tabstop>
     <tabstop>f77flags_button</tabstop>
 </tabstops>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <slots>
     <slot access="protected">builddirClicked()</slot>
     <slot access="protected">cflagsClicked()</slot>
@@ -956,10 +1000,6 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
     <slot access="protected">setDirty()</slot>
     <slot access="protected">topsourcedirClicked()</slot>
 </slots>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-
 </UI>
