--- a/parts/autoproject/removesubprojectdlgbase.ui
+++ b/parts/autoproject/removesubprojectdlgbase.ui
@@ -9,17 +9,17 @@
             <x>0</x>
             <y>0</y>
             <width>378</width>
-            <height>182</height>
+            <height>165</height>
         </rect>
     </property>
     <property name="caption">
         <string>Remove Subproject</string>
     </property>
-    <vbox>
+    <grid>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QGroupBox">
+        <widget class="QGroupBox" row="0" column="0">
             <property name="name">
                 <cstring>fileGroupBox</cstring>
             </property>
@@ -45,7 +45,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>removeLabel</cstring>
@@ -59,7 +58,7 @@
                         <cstring>removeCheckBox</cstring>
                     </property>
                     <property name="text">
-                        <string>Also remove it from disk</string>
+                        <string>Also &amp;remove it from disk</string>
                     </property>
                 </widget>
                 <widget class="QLabel">
@@ -69,27 +68,13 @@
                     <property name="text">
                         <string>&lt;b&gt;Note:&lt;/b&gt; You will not be able to undo this operation!</string>
                     </property>
+                    <property name="alignment">
+                        <set>AlignVCenter</set>
+                    </property>
                 </widget>
             </vbox>
         </widget>
-        <spacer>
-            <property name="name">
-                <cstring>Spacer2</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Vertical</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
-            </property>
-        </spacer>
-        <widget class="QLayoutWidget">
+        <widget class="QLayoutWidget" row="2" column="0">
             <property name="name">
                 <cstring>buttonLayout</cstring>
             </property>
@@ -100,7 +85,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>buttonSpacer</cstring>
@@ -139,7 +123,24 @@
                 </widget>
             </hbox>
         </widget>
-    </vbox>
+        <spacer row="1" column="0">
+            <property name="name">
+                <cstring>Spacer2</cstring>
+            </property>
+            <property name="orientation">
+                <enum>Vertical</enum>
+            </property>
+            <property name="sizeType">
+                <enum>Expanding</enum>
+            </property>
+            <property name="sizeHint">
+                <size>
+                    <width>20</width>
+                    <height>16</height>
+                </size>
+            </property>
+        </spacer>
+    </grid>
 </widget>
 <connections>
     <connection>
@@ -155,13 +156,13 @@
         <slot>reject()</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <slots>
     <slot>accept()</slot>
     <slot>reject()</slot>
 </slots>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
