--- a/parts/autoproject/targetoptionsdlgbase.ui
+++ b/parts/autoproject/targetoptionsdlgbase.ui
@@ -37,7 +37,6 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>TextLabel1</cstring>
@@ -47,7 +46,10 @@
                             </font>
                         </property>
                         <property name="text">
-                            <string>Linker flags (LDFLAGS):</string>
+                            <string>Li&amp;nker flags (LDFLAGS):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>allstatic_box</cstring>
                         </property>
                     </widget>
                     <widget class="QLayoutWidget" row="1" column="1" rowspan="1" colspan="2">
@@ -61,7 +63,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <widget class="QCheckBox">
                                 <property name="name">
                                     <cstring>allstatic_box</cstring>
@@ -105,7 +106,6 @@
                                     <property name="margin">
                                         <number>0</number>
                                     </property>
-
                                     <widget class="QLabel">
                                         <property name="name">
                                             <cstring>ldflagsother_label</cstring>
@@ -115,7 +115,10 @@
                                             </font>
                                         </property>
                                         <property name="text">
-                                            <string>Other:</string>
+                                            <string>O&amp;ther:</string>
+                                        </property>
+                                        <property name="buddy" stdset="0">
+                                            <cstring>ldflagsother_edit</cstring>
                                         </property>
                                     </widget>
                                     <widget class="QLineEdit">
@@ -175,7 +178,10 @@
                             </font>
                         </property>
                         <property name="text">
-                            <string>Explicit dependencies (DEPENDENCIES):</string>
+                            <string>&amp;Explicit dependencies (DEPENDENCIES):</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>dependencies_edit</cstring>
                         </property>
                     </widget>
                     <spacer row="4" column="0">
@@ -225,7 +231,6 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>insidelib_label</cstring>
@@ -303,7 +308,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer5</cstring>
@@ -386,7 +390,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer7</cstring>
@@ -477,7 +480,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>Spacer10</cstring>
@@ -581,13 +583,13 @@
     </connection>
 </connections>
 <tabstops>
-    <tabstop>tabWidget</tabstop>
     <tabstop>allstatic_box</tabstop>
     <tabstop>avoidversion_box</tabstop>
     <tabstop>module_box</tabstop>
     <tabstop>noundefined_box</tabstop>
     <tabstop>ldflagsother_edit</tabstop>
     <tabstop>dependencies_edit</tabstop>
+    <tabstop>tabWidget</tabstop>
     <tabstop>insidelib_listview</tabstop>
     <tabstop>insidemoveup_button</tabstop>
     <tabstop>insidemovedown_button</tabstop>
@@ -600,6 +602,9 @@
     <tabstop>okbutton</tabstop>
     <tabstop>cancelbutton</tabstop>
 </tabstops>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <slots>
     <slot access="protected">insideMoveDownClicked()</slot>
     <slot access="protected">insideMoveUpClicked()</slot>
@@ -609,10 +614,6 @@
     <slot access="protected">outsideMoveUpClicked()</slot>
     <slot access="protected">outsideRemoveClicked()</slot>
 </slots>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-
 </UI>
